Modify style for breadcrumb alignment issue fix
Modify style for breadcrumb alignment issue fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,7 +191,7 @@ nav#top-nav{
 
 
 section.section.sitemap {
-    padding-top: 150px;
+    padding-top: 120px;
 }
 section.section.sitemap .heading{
       padding-bottom: 0px !important;
@@ -1828,10 +1828,10 @@ div#subscribesuccess {
     border-top: 1px solid #ddd;
 }
 .brief-outer{
-    padding-top:100px;
+    padding-top:120px;
 }
 .single-body{
-    margin-top:115px;
+    margin-top:120px;
 }
 @media screen and (pointer: coarse) {
     .card-hover {
